--- a/notebooks/03_categorical_pipeline_column_transformer.ipynb
+++ b/notebooks/03_categorical_pipeline_column_transformer.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "13b19ac3",
    "metadata": {},
    "source": [
     "# Using numerical and categorical variables together\n",
@@ -17,6 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f3787696",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,6 +36,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d6bca831",
    "metadata": {},
    "source": [
     "## Selection based on data types\n",
@@ -47,6 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7a5117e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,6 +65,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "13d1d056",
    "metadata": {},
    "source": [
     "<div class=\"admonition caution alert alert-warning\">\n",
@@ -77,6 +82,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "721586dd",
    "metadata": {},
    "source": [
     "## Dispatch columns to a specific processor\n",
@@ -105,6 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5656256c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,6 +123,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2ba655fe",
    "metadata": {},
    "source": [
     "Now, we create the transformer and associate each of these preprocessors\n",
@@ -125,6 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7b34f33a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,6 +146,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0943f064",
    "metadata": {},
    "source": [
     "We can take a minute to represent graphically the structure of a\n",
@@ -162,6 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b58f7c28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,6 +185,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a9e518ff",
    "metadata": {},
    "source": [
     "The final model is more complex than the previous models but still follows\n",
@@ -191,6 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8579da10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,6 +215,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5a225418",
    "metadata": {},
    "source": [
     "\n",
@@ -220,6 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f3252438",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,6 +243,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f3630dc9",
    "metadata": {},
    "source": [
     "Then, we can send the raw dataset straight to the pipeline. Indeed, we do not\n",
@@ -240,6 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "36891806",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,6 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3777e730",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,6 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6956ade0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,6 +285,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8a09f9ad",
    "metadata": {},
    "source": [
     "To get directly the accuracy score, we need to call the `score` method. Let's\n",
@@ -275,6 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "48dfce81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,6 +304,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "395acd75",
    "metadata": {},
    "source": [
     "## Evaluation of the model with cross-validation\n",
@@ -295,6 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "88a2497e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,16 +330,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0bfaeab8",
    "metadata": {},
    "outputs": [],
    "source": [
     "scores = cv_results[\"test_score\"]\n",
     "print(\"The mean cross-validation accuracy is: \"\n",
-    "      f\"{scores.mean():.3f} \u00b1 {scores.std():.3f}\")"
+    "      f\"{scores.mean():.3f} ± {scores.std():.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "d9a5e172",
    "metadata": {},
    "source": [
     "The compound model has a higher predictive accuracy than the two models that\n",
@@ -325,6 +350,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6167dacd",
    "metadata": {},
    "source": [
     "## Fitting a more powerful model\n",
@@ -352,6 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3925a0e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,6 +397,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "05edb7c4",
    "metadata": {},
    "source": [
     "Now that we created our model, we can check its generalization performance."
@@ -378,6 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b9b453b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,6 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ddb704cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,6 +426,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d887e231",
    "metadata": {},
    "source": [
     "We can observe that we get significantly higher accuracies with the Gradient\n",
@@ -409,6 +440,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0e88d152",
    "metadata": {},
    "source": [
     "In this notebook we:\n",
@@ -427,8 +459,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
