--- a/notebooks/metrics_sol_02.ipynb
+++ b/notebooks/metrics_sol_02.ipynb
@@ -2,9 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "15822137",
    "metadata": {},
    "source": [
-    "# \ud83d\udcc3 Solution for Exercise M7.03\n",
+    "# 📃 Solution for Exercise M7.03\n",
     "\n",
     "As with the classification metrics exercise, we will evaluate the regression\n",
     "metrics within a cross-validation framework to get familiar with the syntax.\n",
@@ -14,7 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "fa8bbb86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +32,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d79d586f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -43,6 +46,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "14ca7281",
    "metadata": {},
    "source": [
     "The first step will be to create a linear regression model."
@@ -50,7 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "3b78b77e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,6 +67,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "30d3a056",
    "metadata": {},
    "source": [
     "Then, use the `cross_val_score` to estimate the generalization performance of\n",
@@ -72,19 +78,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "fae1b4e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 score: 0.794 ± 0.103\n"
+     ]
+    }
+   ],
    "source": [
     "# solution\n",
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
     "scores = cross_val_score(model, data, target, cv=10, scoring=\"r2\")\n",
-    "print(f\"R2 score: {scores.mean():.3f} \u00b1 {scores.std():.3f}\")"
+    "print(f\"R2 score: {scores.mean():.3f} ± {scores.std():.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "92ecd8bf",
    "metadata": {},
    "source": [
     "Then, instead of using the $R^2$ score, use the mean absolute error. You need\n",
@@ -93,20 +109,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "d45458d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean absolute error: 21.892 k$ ± 2.225\n"
+     ]
+    }
+   ],
    "source": [
     "# solution\n",
     "scores = cross_val_score(model, data, target, cv=10,\n",
     "                         scoring=\"neg_mean_absolute_error\")\n",
     "errors = -scores\n",
     "print(f\"Mean absolute error: \"\n",
-    "      f\"{errors.mean():.3f} k$ \u00b1 {errors.std():.3f}\")"
+    "      f\"{errors.mean():.3f} k$ ± {errors.std():.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "35f9d719",
    "metadata": {
     "tags": [
      "solution"
@@ -121,6 +147,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8d54bfbb",
    "metadata": {},
    "source": [
     "Finally, use the `cross_validate` function and compute multiple scores/errors\n",
@@ -130,7 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "3fd6b1bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,13 +171,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "1ecd0da8",
    "metadata": {
     "tags": [
      "solution"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>R2</th>\n",
+       "      <th>MAE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.848721</td>\n",
+       "      <td>21.256799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.816374</td>\n",
+       "      <td>22.084083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.813513</td>\n",
+       "      <td>22.113367</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.814138</td>\n",
+       "      <td>20.448279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.637473</td>\n",
+       "      <td>24.370341</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         R2        MAE\n",
+       "0  0.848721  21.256799\n",
+       "1  0.816374  22.084083\n",
+       "2  0.813513  22.113367\n",
+       "3  0.814138  20.448279\n",
+       "4  0.637473  24.370341"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -165,8 +263,21 @@
    "main_language": "python"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
